@@ -91,12 +91,7 @@ TranscodeJob::status () const
 	s << Job::status ();
 
 	if (!finished ()) {
-		if (_transcoder->state() == Encoder::TRANSCODING) {
-			s << "; " << fixed << setprecision (1) << fps << N_(" ") << _("frames per second");
-		} else {
-			/* TRANSLATORS: this means `computing a hash' as in a digest of a block of data */
-			s << "; " << _("hashing");
-		}
+		s << "; " << fixed << setprecision (1) << fps << N_(" ") << _("frames per second");
 	}
 	
 	return s.str ();
