@@ -1,3 +1,8 @@
+2013-10-19  Carl Hetherington  <cth@carlh.net>
+
+	* Some improvements in progress reporting, especially
+	for long encodes.
+
 2013-10-18  Carl Hetherington  <cth@carlh.net>
 
 	* Fix bug with incorrect validity times given to KDMs.
